--- a/static/css/loginstyles.css
+++ b/static/css/loginstyles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: outfit;
     background: linear-gradient(to bottom right, #ff4da6, #ff80bf);
     height: 100vh;
     display: flex;
@@ -65,6 +65,7 @@ body {
     cursor: pointer;
     margin-top: 10px;
     transition: background-color 0.3s ease;
+    font-family: kanit;
   }
   
   button:hover {
@@ -79,6 +80,7 @@ body {
   .register a {
     color: #ff3385;
     text-decoration: none;
+    font-family: kanit;
   }
   
 img{
