--- a/templates/valentineday.html
+++ b/templates/valentineday.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="">
     
     <link rel="icon" type="image/png" href="logopink.png">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/valentineday.css') }}">
     <script src="{{ url_for('static', filename='js/valentine.js') }}"></script>
    
@@ -29,10 +30,14 @@
     <section>
         <nav>
         <div class="mainhead">
-            <div class="logo">
-                <img src="{{ url_for('static', filename='images/logopink.png') }}" alt="...">
-                <h2>KGW</h2>
-            </div>
+            <a href="{{url_for('home')}}" class="logolink">
+                <div class="logo">
+                    <img src="{{ url_for('static', filename='images/logopink.png') }}" alt="...">
+                    <h2>KGW</h2>
+                </div>
+
+            </a>
+           
             <div class="group">
                 <svg class="icon" aria-hidden="true" viewBox="0 0 24 24"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
                 <input placeholder="Search" type="search" class="input">
@@ -58,6 +63,38 @@
             </div>
         </div>
         </nav>
+    </section>
+
+    <section>
+        <div class="headerlinks">
+            <ul>
+                <li>
+                    <a href="{{ url_for('valentine') }}">Valentine's Day 2025</a>
+
+                    
+                </li>
+                <li>
+                    <a href="{{ url_for('Diamonds') }}">
+                    Gold with Lab Diamonds</li>
+                    </a>
+                <li>
+                    <a href="#">
+                    Personalized Jewellery</li>
+                    </a>
+                <li>
+                    <a href="#">
+                    Gift stored</li>
+                    </a>
+                <li>
+                    <a href="#">
+                    Men's Jewellery</li>
+                    </a>
+                <li>
+                    <a href="#">
+                    Latest Collections</li>
+                    </a>
+            </ul>
+        </div>
     </section>
 
     <section>
@@ -148,7 +185,7 @@
             <div class="item"><img src="https://www.giva.co/cdn/shop/files/ER0621_1.jpg?v=1695303343&width=600" alt="Silver Love Like A Butterfly Studs"></div>
             <div class="item"><img src="https://www.giva.co/cdn/shop/files/BR0694_1.jpg?v=1737613391&width=600" alt="Silver Zircon Ferns Bracelet"></div>
             <div class="item"><img src="https://www.giva.co/cdn/shop/files/ER053_1.jpg?v=1711627127&width=600" alt="Rose Gold Princess Earrings"></div>
-            <div class="item"><img src="https://www.giva.co/cdn/shop/files/AVPD0104_1.jpg?v=1711630734&width=600" alt="Oxidised Silver Moonstone Crescnet Pendant with Box Chain"></div>
+            <!-- <div class="item"><img src="https://www.giva.co/cdn/shop/files/AVPD0104_1.jpg?v=1711630734&width=600" alt="Oxidised Silver Moonstone Crescnet Pendant with Box Chain"></div> -->
         </div>
     </section>
 
@@ -301,6 +338,6 @@
 
     <!-- Owl Carousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='js/valentine.js') }}"></script>
 </body>
 </html>
